microc/tests/expected/err-cmpfunc2.uc.out
../examples/err-cmpfunc2.uc:[12:11]: execution error: Non-integer arithmetic operation
      if (f == g) { // error: function comparison
            ^

1
